Update of nav footer

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ https://templatemo.com/tm-555-upright
                         </ul>
                     </div>
                     <footer class="mb-3 tm-mt-100">
-                        Vedi il codice su <a href="https://templatemo.com" target="_parent" rel="sponsored">Github</a>
+                        Vedi il codice su <a href="https://github.com/josefomanu/via-mazzini-15-oderzo" target="_blank">Github</a>
                     </footer>
                 </nav>
             </div>
