--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                   "availability": "https://schema.org/InStock",
                   "price": "250,000.00",
                   "priceCurrency": "EU",
-                  "url": "http://www.ticketfly.com/purchase/309433"
+                  "url": "https://via-mazzini-15-oderzo.netlify.app/"
                       },
         }
     </script>
