--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ https://templatemo.com/tm-555-upright
                                     <i class="fas fa-solid fa-temperature-half fa-4x tm-post-icon tm-text-primary"></i>
                                     <div class="media-body">
                                         <h4 class="d-block mb-2 tm-text-primary">Riscaldamento e condizionatore interni</h4>  
-                                        <p>L'edificio dispone di riscaldamento centralizzato e climatizzatore elettrico perfettamente funzionanti per un luogo di lavoro ottimale tutto l'anno.</p>
+                                        <p>L'edificio dispone di riscaldamento autonomo e climatizzatore elettrico perfettamente funzionanti per un luogo di lavoro ottimale tutto l'anno.</p>
                                     </div>                                    
                                 </div>
                                 <div class="media mb-4">
