--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ https://templatemo.com/tm-555-upright
                             <div class="col-lg-6 tm-col-home mb-4">
                                 <div class="tm-text-container">                             
                                     <h3 class="tm-text-primary">Il tuo ufficio / negozio in centro storico</h3>
-                                    <p>Eccezionale proprietà  di 170 mq distribuita su una palazzina di tre piani, situata nello storico Palazzo Pittiani, punto di riferimento del centro di Oderzo.</p>
+                                    <p>Eccezionale proprietà  di 187 mq distribuita su una palazzina di tre piani, situata nello storico Palazzo Pittiani, punto di riferimento del centro di Oderzo.</p>
                                     <h3 class="tm-text-primary">Offerta incredibile: può essere tuo per soli € 250,000.00</h3>
                                 </div>                                
                             </div>
@@ -152,7 +152,7 @@ https://templatemo.com/tm-555-upright
                                 <div class="media mb-4">
                                     <i class=" fas fa-thin fa-landmark fa-4x tm-post-icon tm-text-primary"></i>
                                     <div class="media-body">
-                                        <h4 class="d-block mb-2 tm-text-primary">Immobile di 170 mq</h4>  
+                                        <h4 class="d-block mb-2 tm-text-primary">Immobile di 187 mq</h4>  
                                         <p>Distribuito in un edificio di tre piani, situato nello storico Palazzo Pittiani, l'edificio confina con diverse attività commerciali.</p>
                                     </div>                                    
                                 </div>
@@ -210,6 +210,13 @@ https://templatemo.com/tm-555-upright
                                     <div class="media-body">
                                         <h4 class="d-block mb-2 tm-text-primary">2 bagni</h4>  
                                         <p>Al piano terra c'è un bagno di servizio dotato di maniglie per disabili. Al piano nobile si trova un bagno completo con bidet e doccia idromassaggio.</p>
+                                    </div>                                    
+                                </div>
+                                <div class="media mb-4">
+                                    <i class="fas fa-solid fa-sign-hanging fa-4x tm-post-icon tm-text-primary"></i>
+                                    <div class="media-body">
+                                        <h4 class="d-block mb-2 tm-text-primary">Insegna a bandiera di propietà</h4>  
+                                        <p>Completa la proprietà un'insegna a bandiera sul marciapiede del complesso, per aumentare la visibilità della tua attività.</p>
                                     </div>                                    
                                 </div>
                             </div>
@@ -637,8 +644,8 @@ https://templatemo.com/tm-555-upright
                                             <img src="img/oderzo-parcheggio.jpg" alt="Oderzo parcheggio foro boario"/>			
                                         </figure> 
                                         <div class="tm-about-text">
-                                            <h3 class="mb-3 tm-text-primary tm-about-title">Posti auto gratuiti</h3>
-                                            <p>Ci sono tre parcheggi gratuiti a 2 minuti a piedi.</p>
+                                            <h3 class="mb-3 tm-text-primary tm-about-title">3 vaste aree parcheggio in vicinanza</h3>
+                                            <p>Ci sono tre parcheggi gratuiti (disco orario) a 1 minuto a piedi.</p>
                                         </div>
                                     </div>
 
