Added "della propietà" in the parking spot text

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ https://templatemo.com/tm-555-upright
                                         </figure> 
                                         <div class="tm-about-text">
                                             <h3 class="mb-3 tm-text-primary tm-about-title">3 vaste aree parcheggio in vicinanza</h3>
-                                            <p>Ci sono tre parcheggi gratuiti (disco orario) a 1 minuto a piedi.</p>
+                                            <p>Ci sono tre parcheggi gratuiti (disco orario) a 1 minuto a piedi della propietà.</p>
                                         </div>
                                     </div>
 
