--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ https://templatemo.com/tm-555-upright
                                 <div class="tm-text-container">                             
                                     <h3 class="tm-text-primary">Il tuo ufficio / negozio in centro storico</h3>
                                     <p>Eccezionale proprietà  di 187 mq distribuita su una palazzina di tre piani, situata nello storico Palazzo Pittiani, punto di riferimento del centro di Oderzo.</p>
-                                    <h3 class="tm-text-primary">Offerta incredibile: può essere tuo per soli € 250,000.00</h3>
+                                    <h3 class="tm-text-primary">Prezzo base: € 230,000.00 (trattabile)</h3><h2 class="tm-text-primary">(trattabile)</h2>
                                 </div>                                
                             </div>
                             <div class="col-lg-6 tm-col-home mb-4">
